fix: lemon image overflow

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -7,7 +7,6 @@
   background-position: center;
   margin-bottom: 110px;
   position: relative;
-  overflow-x: hidden;
 }
 
 .banner__title {
