--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,7 @@
 
 .header__basket {
   margin-left: 16px;
+  cursor: pointer;
 }
 
 .header__menu_desktop {
