--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,11 @@ body {
   box-sizing: border-box;
 }
 
+.main {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 480px) {
   body {
     padding-bottom: 60px;
